<resources>
    <string name="app_name">KinderApp</string>

    <string name="action_settings">Settings</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="search_item">search</string>

    <string-array name="groups">
        <item>4YO Koala</item>
        <item>4YO Red</item>
        <item>3YO Wombat</item>
        <item>3YO</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="frag1">frag1</string>
    <string name="frag2">frag2</string>
    <string name="frag3">frag3</string>
    <string name="frag4">frag4</string>
    <string name="frag5">frag5</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="options_exit_text">Exit</string>
    <string name="action_export_text">Export</string>
    <string name="action_import_text">Import</string>
    <string name="add_button">add button</string>
    <string name="date_text">Date:</string>
    <string name="activity_text">Activity:</string>
    <string name="children_text">Children:</string>
    <string name="lo_text">LO:</string>
    <string name="comment_text">Comment:</string>
    <string name="date_view">Current date</string>
    <string name="changeDate_button">Change Date</string>
    <string name="image_text">\u0020 Image will be \ndisplayed here</string>
    <string name="comment_hint">Enter your comment here</string>
    <string name="select_activity">Select Activities</string>
    <string name="select_children">Select Children</string>
    <string name="select_lo">Select L.O.</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="activity_not_selected">"You didn't select any activity"</string>
    <string name="activities_dialog_title">"Select from the following activities: "</string>
    <string name="children_not_selected">"You didn't select any child"</string>
    <string name="children_dialog_title">Select from the following children: </string>
    <string name="lo_not_selected">"You didn't select any learning outcome"</string>
    <string name="lo_dialog_title">"Select from the following Learning Outcomes:" </string>
    <string name="delete_data_message">This will delete the image and any data associated with it. Do you wish to continue?</string>
    <string name="incomplete_form_alert">Warning: Form Data is incomplete. Do you still wish to continue?</string>
    <string-array name="childArray">
        <item>Jim</item>
        <item>Jack</item>
        <item>Tim</item>
        <item>Chris</item>
        <item>Andy</item>
        <item>John</item>
        <item>Sam</item>
        <item>Jim</item>
        <item>Jack</item>
        <item>Tim</item>
        <item>Chris</item>
        <item>Andy</item>
    </string-array>

    <string-array name="activityArray">
        <item>Cooking</item>
        <item>Sport</item>`
        <item>Art</item>
        <item>Cooking</item>
        <item>Sport</item>`
        <item>Art</item>
        <item>Cooking</item>
        <item>Sport</item>`
        <item>Art</item>
        <item>Cooking</item>
        <item>Sport</item>`
        <item>Art</item>
    </string-array>

</resources>
