<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
         app:showAsAction="never" />

    <item android:id="@+id/action_import"
        android:title="@string/action_import_text"

        />

    <item android:id="@+id/action_export"
        android:title="@string/action_export_text"

        />

    <item android:id="@+id/exit_app"
        android:title="@string/options_exit_text"

        />

    <item android:id="@+id/search_icon"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="@string/search_item"
        app:showAsAction="ifRoom" />


</menu>
