<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:id="@+id/showpicture_image"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/material_grey_300"
        android:adjustViewBounds="false" />


    <RelativeLayout android:layout_width="match_parent"
    android:layout_height="198dp"

        android:touchscreenBlocksFocus="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout"
        android:layout_below="@+id/showpicture_image">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_text"
        android:id="@+id/date_text"
        android:textSize="28dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/activity_text"
        android:layout_alignStart="@+id/activity_text"
        android:layout_marginTop="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/children_text"
        android:id="@+id/children_text"
        android:textSize="28dp"
        android:layout_below="@+id/activity_text"
        android:layout_alignLeft="@+id/activity_text"
        android:layout_alignStart="@+id/activity_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activity_text"
        android:layout_marginBottom="20dp"
        android:id="@+id/activity_text"
        android:textSize="28dp"
        android:layout_marginLeft="110dp"
        android:layout_marginStart="110dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


        <View
            android:layout_width="3dp"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lo_text"
        android:id="@+id/lo_text"
        android:textSize="28dp"
        android:layout_alignBottom="@+id/changeDate_button"
        android:layout_alignLeft="@+id/comment_text"
        android:layout_alignStart="@+id/comment_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/comment_text"
        android:id="@+id/comment_text"
        android:textSize="28dp"
        android:layout_marginLeft="107dp"
        android:layout_marginStart="107dp"
        android:layout_alignTop="@+id/activity_text"
        android:layout_toRightOf="@+id/changeDate_button"
        android:layout_toEndOf="@+id/changeDate_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/date_view"
        android:id="@+id/date_view"
        android:layout_marginLeft="-30dp"

        android:textSize="28dp"
        android:layout_alignTop="@+id/date_text"
        android:layout_toRightOf="@+id/children_text"
        android:layout_toEndOf="@+id/children_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeDate_button"
            android:id="@+id/changeDate_button"
            android:textSize="20dp"
            android:layout_marginLeft="52dp"
            android:layout_marginStart="52dp"
            android:layout_alignBottom="@+id/date_view"
            android:layout_toRightOf="@+id/date_view"
            android:layout_toEndOf="@+id/date_view" />

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_edit"
            android:layout_marginLeft="11dp"
            android:layout_alignBottom="@+id/activity_text"
            android:layout_toRightOf="@+id/children_text"
            android:layout_toEndOf="@+id/children_text" />

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/children_edit"
            android:layout_marginLeft="11dp"
            android:layout_alignBottom="@+id/children_text"
            android:layout_toRightOf="@+id/children_text"
            android:layout_toEndOf="@+id/children_text" />

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:id="@+id/lo_edit"
            android:layout_marginLeft="11dp"
            android:layout_alignBottom="@+id/lo_text"
            android:layout_toRightOf="@+id/lo_text"
            android:layout_toEndOf="@+id/lo_text" />

        <EditText
            android:layout_width="450sp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/comment_edit"
            android:layout_marginLeft="11dp"
            android:layout_alignBottom="@+id/comment_text"
            android:layout_toRightOf="@+id/comment_text"
            android:layout_toEndOf="@+id/comment_text"
            android:maxLines="4" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_text"
        android:id="@+id/image_text"
        android:textSize="35dp"
        android:lines="2"
        android:maxLines="1"
        android:layout_marginTop="140dp"
        android:layout_alignTop="@+id/showpicture_image"
        android:layout_centerHorizontal="true"
        android:textColor="#48101910"
        android:visibility="visible"
        android:typeface="sans"
        android:focusable="false"
        android:autoText="false" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/takepicture_image"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_alignTop="@+id/showpicture_image"
        android:layout_toRightOf="@+id/showpicture_image"
        android:layout_toEndOf="@+id/showpicture_image"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:clickable="true" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/deletepicture_image"
        android:src="@drawable/ic_delete_black_24dp"
        android:clickable="true"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/takepicture_image"
        android:layout_alignStart="@+id/takepicture_image" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/savepicture_image"
        android:src="@drawable/ic_save_black_24dp"
        android:clickable="true"
        android:layout_alignBottom="@+id/image_text"
        android:layout_alignLeft="@+id/deletepicture_image"
        android:layout_alignStart="@+id/deletepicture_image" /><![CDATA[

    >

]]>
</RelativeLayout>